--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "node server/index.cjs",
-    "server:simple": "node server/index.js"
+    "server:simple": "node server/index.js",
+    "start": "NODE_ENV=production node server/index.cjs"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
