--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Backend Server Configuration
 PORT=4000
 ADMIN_EMAIL=shivasaini1938@gmail.com
-ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD=Shiva@2416
 JWT_SECRET=your-long-random-secret-key-here-change-in-production
 AUTH_SECRET=your-auth-secret-change-in-production
 
