--- a/package.json
+++ b/package.json
@@ -13,22 +13,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.14",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^2.0.0",
-    "three": "^0.181.0",
-    "vanta": "^0.5.24"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
     "tailwindcss": "^3.4.8",
+    "three": "^0.181.0",
+    "vanta": "^0.5.24",
     "vite": "^5.0.0"
   },
+  "devDependencies": {},
   "engines": {
     "node": ">=20.x"
   }
