Fix: Remove NODE_ENV from start script for cross-platform compatibility

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "server": "node server/index.cjs",
     "server:simple": "node server/index.js",
-    "start": "NODE_ENV=production node server/index.cjs"
+    "start": "node server/index.cjs"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
