--- a/package.json
+++ b/package.json
@@ -6,29 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "npx vite build",
-    "preview": "vite preview",
-    "server": "node server/index.cjs",
-    "server:simple": "node server/index.js",
-    "start": "node server/index.cjs"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.14",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "resend": "^2.0.0",
-    "tailwindcss": "^3.4.8",
     "three": "^0.181.0",
-    "vanta": "^0.5.24",
-    "vite": "^5.0.0"
+    "vanta": "^0.5.24"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.0",
+    "vite": "^5.0.0",
+    "tailwindcss": "^3.4.8",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14"
+  },
   "engines": {
-    "node": ">=20.x"
+    "node": "20.x"
   }
 }
