--- a/package.json
+++ b/package.json
@@ -1,31 +1,14 @@
 {
-  "name": "portfolio",
-  "type": "module",
+  "name": "portfolio-monorepo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "npx vite build",
-    "preview": "vite preview",
-    "server": "node server/index.cjs",
-    "start": "node server/index.cjs"
+    "install:all": "cd frontend && npm install && cd ../backend && npm install",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:backend": "cd backend && npm start",
+    "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
+    "start": "cd backend && npm start"
   },
-  "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.14",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "postcss": "^8.4.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.8",
-    "three": "^0.181.0",
-    "vanta": "^0.5.24",
-    "vite": "^5.0.0"
-  },
-  "devDependencies": {},
   "engines": {
     "node": ">=20.x"
   }
