feat: integrate MongoDB Atlas for cloud database storage
- Add MongoDB connection module and Mongoose models

- Replace JSON file storage with MongoDB collections

- Create Message, Project, and Admin schemas

- Update backend API routes to use MongoDB

- Install mongoose dependency

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,10 @@ VITE_API_BASE=http://localhost:3000  # vercel dev default; leave empty when depl
 # Resend API key (keep private, do not commit real key)
 RESEND_API_KEY=your_resend_api_key_here
 
-# Additional optional configuration
-# MONGODB_URI=your_mongodb_connection_string
+# MongoDB Atlas Configuration (for cloud database)
+# Get this from MongoDB Atlas: https://www.mongodb.com/cloud/atlas
+# Format: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/portfolioDB?retryWrites=true&w=majority
+MONGODB_URI=your_mongodb_connection_string_here
 
 # EmailJS Configuration (get these from https://emailjs.com)
 # Sign up at emailjs.com and create:
