--- a/.env
+++ b/.env
@@ -21,3 +21,7 @@ VITE_API_BASE=
 VITE_EMAILJS_SERVICE_ID=service_b11awyr
 VITE_EMAILJS_TEMPLATE_ID=template_7f7n2ep
 VITE_EMAILJS_PUBLIC_KEY=oJphlX6TL4wVOhtkG
+
+# MongoDB Atlas Configuration
+# Password encoded for URL (@ becomes %40)
+MONGODB_URI=mongodb+srv://shivasaini2006_db:Shiva%402416@cluster01.ori93ac.mongodb.net/portfolioDB?retryWrites=true&w=majority
