--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^9.1.4"
   },
   "engines": {
     "node": ">=20.x"
